Fix: remove dark mode button, remove side bar border

--- a/frontend/app/src/app/globals.css
+++ b/frontend/app/src/app/globals.css
@@ -43,9 +43,11 @@
   --color-transparent: transparent;
   --color-white: #ffffff;
   --color-black: #101828;
+  
   /* reservation */
-  --color-res-green-dark: #024023;
-  --color-res-green-light:  #EBFFEE;
+  --color-res-green-900: #024023;
+  --color-res-green-800: #024023;
+  --color-res-green-100:  #EBFFEE;
   --color-res-green-success:  #EBFFEE;
   --color-res-red: #900B09;
   --color-res-gray: #84847C;
@@ -265,11 +267,11 @@
 }
 
 @utility menu-item-active {
-  @apply bg-res-green-light text-gray-700 dark:bg-brand-500/[0.12] dark:text-brand-400;
+  @apply bg-res-green-100 text-gray-700 dark:bg-brand-500/[0.12] dark:text-brand-400;
 }
 
 @utility menu-item-inactive {
-  @apply bg-res-green-light/70 text-gray-700 hover:bg-res-green-light/90 group-hover:text-gray-700 dark:text-gray-300 dark:hover:bg-white/5 dark:hover:text-gray-300;
+  @apply bg-res-green-100/70 text-gray-700 hover:bg-res-green-100/90 group-hover:text-gray-700 dark:text-gray-300 dark:hover:bg-white/5 dark:hover:text-gray-300;
 }
 
 @utility menu-item-icon {
